# vaultpay

./: .gitignore  LICENSE  README.md  SECURITY.md  THIRD-PARTY-LICENSES.md  VaultPay-Pitch-Deck.pptx  VaultPay-Technical-Specification.md  vercel.json
.github/: dependabot.yml
.github/workflows/: ci.yml
archive/: 01-HACKATHON-SPEC.md  02-INTEGRATION-GUIDE.md
docs/0-Solana_Program/: 0-Solana_Introduction.md  1-Solana_Step_By_Step_Development.md  2-Token2022_Confidential_Transfer.md  Solana_EIL10.md
docs/1-Arcium/: 0-Arcium_General.md  1-Arcium_Development.md  2-Arcium_TypeScript_SDK_API_Ref.md  Arcium_Blueprints.md  (+4 more)
svp/: .dockerignore  .env  .env.confidential-mint  .env.example  .env.production.example  Dockerfile  PRIVACY-ARCHITECTURE.md  README.md  ROADMAP.md  confidential-mint-keypair.json  docker-compose.yml  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
svp/vaultpay_confidential/: Anchor.toml  Arcium.toml  Cargo.toml  README.md  deploy-devnet.sh  fix-mxe-cluster.sh  package.json
svp/vaultpay_confidential/encrypted-ixs/: Cargo.toml
svp/vaultpay_confidential/encrypted-ixs/src/: lib.rs
svp/vaultpay_confidential/programs/vaultpay_confidential/: Cargo.toml
svp/vaultpay_confidential/programs/vaultpay_confidential/src/: lib.rs
svp/vaultpay_confidential/scripts/: check-cluster-direct.ts  check-cluster-status.ts  decode-mxe.ts  find-cluster-offset.ts  find-cluster.ts  find-cluster2.ts  init-devnet.ts  verify-cluster.ts
svp/vaultpay_confidential/tests/: vaultpay_confidential.ts
(+123 files in other folders)
