[workspace]
members = ["programs/*", "encrypted-ixs"]
resolver = "2"

# Force edition2021 for crates that use edition2024 (not supported by Cargo 1.84)
[patch.crates-io]
constant_time_eq = { path = "vendor/constant_time_eq" }
blake3 = { path = "vendor/blake3" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
